tests/types/errors/optional_member_access_without_check.expr
class Dog {
    str bark() {
        return "woof";
    }
}

Dog? d = Dog();
print d.bark();
